これはMKV10のそーすを改造したものです。
判明バグ?;
一部のゲームでキーボードをだすとフリーズする(武装神姫)
コードを保存すると比較サーチがおかしくなる
コード保存と読込を繰り返していると保存読込機能が反応しなくなる
一部の浮動小数が表示されない 0.01,0.001
カラーファイルを切り替えるのをくりかえしてると効かなくなる,ゲームがバグる

this is modded mkultrav10.
KnownProblem;
doesnot work fine unknown value search after code save
if code is reloaded & saved many times,save&reload function doesnot work..
this is modded mkultrav10.

2010/11/24
DMAとJOKERは値の方をアドレスコピーに変更,□でベースアドレス
コピー開始と終了位置の色の変更(=コード実行状態)とメニューから飛べるようにした
レジスタzeroの表示をprxtoolと同じくzrに変更
合成浮動小数のチェック修正＋行間を変更できるようにした
カラー設定を追加＋読み込んでなかったので修正
change DMA/JOKER addresscopy,from hackvalue,[] DMA BASEADDRESS
added jumpmenu [] copystart,copyend position
change zero register to zr like PSPLINK/PRXTOOL
fixed mergegfloat,and can be changed backline
more color for color.txt

2010/11/22
メモリビューワーでのバイト書き込み修正
サーチメニューでもDECOERを見れるようにした(3bitMASKあどれす)
16bitサーチで半浮動小数を出すように変更
桁あふれの半浮動小数は表示しないように変更
描写してなかったところをいっぱいまでに変更
1度に見れるサーチ結果の表示を増やした
カーソルのはみ出し修正
増加分サーチのアスキーと浮動小数表示廃止(浮動小数加減未対応)
アドレス範囲でコピーが使えなかったので修正
アドレス範囲が短い時進歩の割り算が0でフリーズしていたのを修正
Value.ASCII → ASCII
fixed byte store copy menu on ram browser
support decoder on search result(3bitmask aligned)
support 16bit upper/half float search
fixed 16bit float display
fixed cursor position
fixed address range bug
delete ASCII/FLOAT on searcher dec/inc by

2010/11/19
コピーメニューのDMAとJOKERを入れ替えた
カラーファイルの上限を8つまでに変更
チート選択メニューで斜め押しだとフリーズするのを修正
メニューの説明がおかしかったので修正
swap DMA/JOKER FLAG changer
max color*.txt file up tp eight
fix freeze bug,DPAD UPLEFT/UPRIGHT/DONWLEFT/DOWNRIGHT
fixed cheat menu hints

2010/11/18
HOMEKEY押したときはメニュー外に移動に変更
PSPLINK互換のためUSBを外した(PSIDは復活)
added newmakefile(remove USB) because PSPLINK compatibility

2010/11/16
パッドデータがプラグイン表示以外でてなかったのを修正
ログビューア－が５つ分保存されてなかったので修正
設定ファイルをms0:seplugins/nitePR/colorからms0:seplugins/nitePR/MKIJROに変更
fixed joker output,back to decoder
change settingfile path,ms0:seplugins/nitePR/color -> ms0:seplugins/nitePR/MKIJRO

2010/11/15
カラーファイルでボタン設定をできるようにした
JOKER吐き出しアドレスをASMぱっちなしに変更