@@ -437,4 +437,27 @@
 0x000016C0 0xD0060000
 0x000016C4 0xD0068000
 0x000016C8 0x68000000
-0x000016CC 0xb0000000
+0x000016CC 0xB0000000
+#UNKNOWN VFPU OP
+0x00001700 0xD0380000
+0x00001704 0xD0390000
+#MFLOAT_FIXTEST
+0x00001000 0x3C004000
+0x00001004 0x24000000
+0x00001008 0x24011000
+0x0000100C 0x24022000
+0x00001010 0x24033000
+0x00001014 0x20044000
+0x00001018 0x20055000
+0x0000101C 0x20066000
+0x00001020 0x20077000
+0x00001024 0x24088000
+0x00001028 0x34099000
+#JOKER COPY TEST
+0xFF000000 0x00001000
+0x00001010 0x00000000
+0x00001000 0x08801040
+#DMABASE COPY TEST
+0xFFFFFFFF 0x00001000
+0x00001010 0x00000000
+0x00001000 0x08801040
